# Surf-Seg

./: CMakeLists.txt  CMakePresets.json  README.md
source/: main.cpp
source/loader/: ASCIILoader.h  PCLLoader.h  VTKLoader.h
source/spec/: Triangle.h
source/utils/: KDTreeFLANN.h  OctreeFLANN.h  PCLKdTreeFLANN.h  PCLOctreeFLANN.h  UnionFind.h  VTKKdTreeFLANN.h
src/cpp/: main.cpp
src/python/: main.py
